metodo de cadastro de categoria implementado

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,7 @@
         ],
         "class-methods-use-this": "off",
         "import/prefer-default-export": "off",
+        "comma-dangle": ["error", "never"],
         "no-shadow": "off",
         "no-console": "off",
         "no-useless-constructor": "off",
